<resources>
    <string name="app_name">MoviesPreview</string>

    <!-- Main Activity -->
    <string name="main_menu_now_playing">Now Playing</string>
    <string name="main_menu_popular">Popular</string>
    <string name="main_menu_top_rated">Top Rated</string>
    <string name="main_menu_upcoming">Upcoming</string>
    <string name="main_activity_search_menu_title">Search</string>
    <string name="about_menu_item">About</string>
    <!-- End Main Activity -->

    <!-- Errors -->
    <string name="error_no_network_connection_message">Verify your network connection and try again</string>
    <string name="error_unexpected_error_message">An unexpected error has occurred. Please, try again later.</string>
    <string name="error_retry">Retry</string>
    <!-- End Errors -->


    <!-- Details Fragment -->
    <string name="overview_title">Overview</string>
    <string name="genres_title">Genres</string>
    <string name="popularity_title">Popularity</string>
    <string name="vote_count_title">Vote Count</string>
    <string name="release_date_title">Release Date</string>
    <string name="action_genre">Action</string>
    <string name="adventure_genre">Adventure</string>
    <string name="animation_genre">Animation</string>
    <string name="comedy_genre">Comedy</string>
    <string name="crime_genre">Crime</string>
    <string name="documentary_genre">Documentary</string>
    <string name="drama_genre">Drama</string>
    <string name="familiy_genre">Family</string>
    <string name="fantasy_genre">Fantasy</string>
    <string name="history_genre">History</string>
    <string name="horror_genre">Horror</string>
    <string name="music_genre">Music</string>
    <string name="mystery_genre">Mystery</string>
    <string name="sci_fi_genre">SciFi</string>
    <string name="tv_movie_genre">Tv Movie</string>
    <string name="thriller_genre">Thriller</string>
    <string name="war_genre">War</string>
    <string name="western_genre">Western</string>
    <string name="generic_genre">Generic</string>
    <string name="movie_credits_title">Credits</string>
    <!-- End Details Fragment -->


    <!-- Search -->
    <string name="search_hint">Search movies and characters</string>
    <string name="empty_search">No results found for %1$s</string>
    <!-- End Search-->

    <!-- Person -->
    <string name="person_birthday_title">Birthday</string>
    <string name="person_birth_place_title">Place of birth</string>
    <string name="person_death_day_title">Day of death</string>
    <string name="person_bio_title">Biography</string>
    <string name="person_no_details">No details available at this time</string>
    <!-- End Person -->

    <!-- About -->
    <string name="about_top_bar_title" translatable="false">@string/about_menu_item</string>
    <string name="about_rate_app_action">Rate app</string>
    <string name="about_share_app_action">Share app</string>
    <string name="about_privacy_policy_action">Privacy Policy</string>
    <string name="about_brows_code_action">Browse app code</string>
    <string name="about_open_source_action">Open source licenses</string>
    <string name="about_the_movie_db_terms_of_use">The Movie DB Terms of Use</string>
    <string name="about_content">Movies Preview is an application developed to verify some development ideas and to have an example of how some things can be done in the Android world.\n
                              It provides to the user access to The Movie DB, browsing the information available in the database. </string>
    <string name="share_app_text">Hey check out this app: %1$s </string>
    <!-- End About -->

    <!-- Nav Header -->
    <string name="nav_header_login">Login</string>
    <string name="nav_header_to_account">Account >></string>
    <!-- End Nav Header -->

    <!-- Account -->
    <string name="account_title">Account</string>
    <string name="account_approve_reminder">Please approve Movies Preview to use your data.</string>
    <string name="account_need_to_login">You need to be logged in to execute this action.</string>
    <string name="account_favorite_title">Favorite Movies</string>
    <string name="account_no_favorite_movies">No favorite movies yet.</string>
    <string name="account_favorite_movies_error">Unable to load favorites.</string>
    <!-- End Account -->

    <!-- Favorites -->
    <string name="favorite_movies_title">Favorite Movies</string>
    <!-- End Favorites -->


</resources>
