<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/main_navigation"
  app:startDestination="@id/playingMoviesFragment">

  <fragment
    android:id="@+id/playingMoviesFragment"
    android:name="com.jpp.moviespreview.screens.main.movies.fragments.PlayingMoviesFragment"
    android:label="@string/main_menu_now_playing"
    tools:layout="@layout/fragment_movies">
    <action
      android:id="@+id/action_playingMoviesFragment_to_movieDetailsFragment"
      app:destination="@id/movieDetailsFragment"
      app:enterAnim="@anim/enter_slide_down"
      app:exitAnim="@anim/exit_slide_down"
      app:popEnterAnim="@anim/pop_enter_slide_up"
      app:popExitAnim="@anim/pop_exit_slide_up"/>
  </fragment>
  <fragment
    android:id="@+id/popularMoviesFragment"
    android:name="com.jpp.moviespreview.screens.main.movies.fragments.PopularMoviesFragment"
    android:label="@string/main_menu_popular"
    tools:layout="@layout/fragment_movies">
    <action
      android:id="@+id/action_popularMoviesFragment_to_movieDetailsFragment"
      app:destination="@id/movieDetailsFragment"
      app:enterAnim="@anim/enter_slide_down"
      app:exitAnim="@anim/exit_slide_down"
      app:popEnterAnim="@anim/pop_enter_slide_up"
      app:popExitAnim="@anim/pop_exit_slide_up"/>
  </fragment>
  <fragment
    android:id="@+id/upcomingMoviesFragment"
    android:name="com.jpp.moviespreview.screens.main.movies.fragments.UpcomingMoviesFragment"
    android:label="@string/main_menu_upcoming"
    tools:layout="@layout/fragment_movies">
    <action
      android:id="@+id/action_upcomingMoviesFragment_to_movieDetailsFragment"
      app:destination="@id/movieDetailsFragment"
      app:enterAnim="@anim/enter_slide_down"
      app:exitAnim="@anim/exit_slide_down"
      app:popEnterAnim="@anim/pop_enter_slide_up"
      app:popExitAnim="@anim/pop_exit_slide_up"/>
  </fragment>
  <fragment
    android:id="@+id/topRatedMoviesFragment"
    android:name="com.jpp.moviespreview.screens.main.movies.fragments.TopRatedMoviesFragment"
    android:label="@string/main_menu_top_rated"
    tools:layout="@layout/fragment_movies">
    <action
      android:id="@+id/action_topRatedMoviesFragment_to_movieDetailsFragment"
      app:destination="@id/movieDetailsFragment"
      app:enterAnim="@anim/enter_slide_down"
      app:exitAnim="@anim/exit_slide_down"
      app:popEnterAnim="@anim/pop_enter_slide_up"
      app:popExitAnim="@anim/pop_exit_slide_up"/>
  </fragment>



  <fragment
    android:id="@+id/movieDetailsFragment"
    android:name="com.jpp.moviespreview.screens.main.details.MovieDetailsFragment"
    android:label="MovieDetailsFragment"
    tools:layout="@layout/fragment_details">
    <argument
      android:name="movieId"
      app:argType="string" />
    <argument
      android:name="movieImageUrl"
      app:argType="string" />
    <argument
      android:name="movieTitle"
      app:argType="string" />
  </fragment>

  <fragment
    android:id="@+id/searchFragment"
    android:name="com.jpp.moviespreview.screens.main.search.SearchFragment"
    android:label="SearchFragment" />

</navigation>